# english-skill-tester

./: .env.example  .env~  .gitignore  ANALYSIS.md  ARCHITECTURE.md  IMPLEMENTATION_STRATEGY.md  IMPLEMENTATION_STRATEGY_cmd002.md  INVESTIGATION_cmd002.md  README.md  pyproject.toml
config/: settings.yaml
config/personas/: default.yaml  strict.yaml
config/prompts/: advanced.txt  beginner.txt  corrections.yaml  intermediate.txt  levels.yaml  scaffolding.yaml  topics.yaml
frontend/: index.html  review.html
frontend/css/: styles.css
frontend/js/: app.js  character.js  ui.js  websocket.js
src/english_skill_tester/: __init__.py  config.py  main.py
src/english_skill_tester/analysis/: feedback.py  transcript.py
src/english_skill_tester/api/: routes.py  websocket.py
src/english_skill_tester/assessment/: calibration.py  llm_evaluator.py  metrics.py  rule_based.py  scorer.py
src/english_skill_tester/audio/: capture.py  encoder.py  playback.py  recorder.py
src/english_skill_tester/conversation/: prompt_engine.py  prompts.py  strategy.py
src/english_skill_tester/models/: assessment.py  session.py  user_profile.py
src/english_skill_tester/realtime/: client.py  events.py  tools.py
src/english_skill_tester/storage/: __init__.py  score_history.py  user_profile.py
tests/: test_assessment.py  test_audio.py  test_integration_cefr.py  test_models_smoke.py  test_prompt_engine.py  test_realtime.py  test_routes_smoke.py  test_scorer_smoke.py  test_storage_smoke.py  test_strategy_cefr.py  test_user_profile.py  test_websocket_user_profile.py
